Fix titles on top to be more elegant
I was brain-dead and did it in a hacky way that wasn't really
needed - this makes it cleaner (and doesn't put horizontal
scrollbars up).

--- a/theme/patdavid/static/css/darktable.css
+++ b/theme/patdavid/static/css/darktable.css
@@ -231,13 +231,14 @@ h1+h2, h2+h3, h3+h4, h4+h5, h5+h6 {
     .page .container.title,
     .category .container.title {
         position: absolute;
-        left: 50%;
         top: 2.6rem;
+        max-width: initial;
     }
     .page .container.title .row, 
     .category .container.title .row {
         position: relative;
-        left: -50%;
+        width: 960px;
+        margin: 0 auto;
         padding-right: 20px;
     }
 }
